package org.example.model;

public class Delivery extends Car {
    public Delivery(String registration) {
        super(registration, CarType.DELIVERY);
        bonusFee = 0;
    }
}
